--- a/languages/rc-suite-fr_FR.po
+++ b/languages/rc-suite-fr_FR.po
@@ -1,11 +1,9 @@
-#, fuzzy
 msgid ""
 msgstr ""
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Project-Id-Version: RC Suite\n"
 "POT-Creation-Date: 2021-07-01 16:48+0200\n"
-"PO-Revision-Date: 2020-03-22 12:15+0100\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-07-01 16:49+0200\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15,40 +13,45 @@ msgstr ""
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: rc-suite.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
-"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"Last-Translator: \n"
+"Language: fr\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.min.js\n"
 
 #: public/class-rc-suite-public.php:140
 msgid "Hello"
-msgstr ""
+msgstr "Bonjour"
 
 #: public/class-rc-suite-public.php:140
 msgid "Log out"
-msgstr ""
+msgstr "Se déconnecter"
 
 #: public/class-rc-suite-public.php:146
 msgid "Login"
-msgstr ""
+msgstr "Connexion"
 
 #. Plugin Name of the plugin/theme
+#, fuzzy
 msgid "RC Suite"
-msgstr ""
+msgstr "RC Suite"
 
 #. Plugin URI of the plugin/theme
+#, fuzzy
 msgid "https://www.raulcarrion.com/plugins/rc-suite/"
-msgstr ""
+msgstr "https://www.raulcarrion.com/plugins/rc-suite/"
 
 #. Description of the plugin/theme
+#, fuzzy
 msgid "Funcionalidades para mejorar tu sitio web."
-msgstr ""
+msgstr "Funcionalidades para mejorar tu sitio web."
 
 #. Author of the plugin/theme
+#, fuzzy
 msgid "Raúl Carrión"
-msgstr ""
+msgstr "Raúl Carrión"
 
 #. Author URI of the plugin/theme
+#, fuzzy
 msgid "https://www.raulcarrion.com/"
-msgstr ""
+msgstr "https://www.raulcarrion.com/"
